src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Marketing_Tier__c</fullName>
        <description>Used to track Marketing Tier</description>
        <label>Marketing Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unassigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>IF(
AND(
  NOT(ISBLANK(FirstName ) ),
  NOT(ISBLANK( MiddleName ) ),
  NOT(ISBLANK( LastName ) )
),
FirstName + &apos; &apos; + MiddleName + &apos; &apos; +LastName,

IF(
AND(
  NOT(ISBLANK(FirstName ) ),
  NOT(ISBLANK( LastName ) )
),
FirstName + &apos; &apos; + LastName,

IF(
AND(
  NOT(ISBLANK( MiddleName ) ),
  NOT(ISBLANK( LastName ) )
),
MiddleName + &apos; &apos; +LastName,
LastName
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Years_Registered__c</fullName>
        <description>Number of years an Advisor has been registered</description>
        <formula>(TODAY()  -  Year_Registered__c) / 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Years Registered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office_Phone_Extension__c</fullName>
        <description>Office Phone extension, not on Layout</description>
        <label>Office Phone Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_MMD_ID__c</fullName>
        <description>MMD field</description>
        <formula>Account.MMD_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Org MMD ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Type__c</fullName>
        <description>Part of business model that describes how products are distributed</description>
        <label>Org Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bank Broker Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fund of Fund/ Asset Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Broker Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Bank Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Broker/ Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wirehouse</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Other_Email__c</fullName>
        <description>Secondary Contact email</description>
        <encrypted>true</encrypted>
        <label>Other Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PEP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tracks PEP for client service</description>
        <label>Politically Exposed Person</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Organization__c</fullName>
        <description>Not in use</description>
        <formula>Account.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Size__c</fullName>
        <label>Plan Size</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;10,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10,000-20,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20,000-30,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30,000-40,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10,000-20,001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10,000-20,002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10,000-20,003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10,000-20,004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10,000-20,005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10,000-20,006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10,000-20,007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10,000-20,008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30,000-40,001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30,000-40,002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30,000-40,003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30,000-40,004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30,000-40,005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30,000-40,006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30,000-40,007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30,000-40,008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;10,001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;10,003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;10,004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;10,005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;10,006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;10,007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;10,008</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <description>Tracks plan type for a related contact</description>
        <label>Plan Type</label>
        <picklist>
            <picklistValues>
                <fullName>401(k)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endowment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corp Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corp Cash;Defined Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corp Cash;Defined Benefit;Defined Contribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corp Cash;Defined Benefit;Defined Contribution;Endowment Assets;Foundation Assets;Investment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corp Cash;Defined Benefit;Endowment Assets;Foundation Assets;Investment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corp Cash;Defined Benefit;Investment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corp Cash;Defined Contribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corp Cash;Endowment Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corp Cash;Endowment Assets;Foundation Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corp Cash;Investment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defined Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defined Benefit;Defined Contribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defined Benefit;Defined Contribution;Endowment Assets;Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defined Benefit;Defined Contribution;Foundation Assets;VEBA - Variable Employee Benefit Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defined Benefit;Defined Contribution;Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defined Benefit;Defined Contribution;Insurance;Investment;Sub-Advisory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defined Benefit;Defined Contribution;Investment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defined Benefit;Defined Contribution;Investment;VEBA - Variable Employee Benefit Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defined Benefit;Defined Contribution;Sub-Advisory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defined Benefit;Defined Contribution;VEBA - Variable Employee Benefit Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defined Benefit;Endowment Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defined Benefit;Endowment Assets;Foundation Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defined Benefit;Endowment Assets;Foundation Assets;Investment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defined Benefit;Endowment Assets;Foundation Assets;Sovereign Wealth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defined Benefit;Endowment Assets;Investment</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <picklist>
            <picklistValues>
                <fullName>Platform 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform 3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <description>Tracks a contact&apos;s preferred name, also used for Kanji Characters</description>
        <encrypted>true</encrypted>
        <inlineHelpText>Please use this field to track the preferred name of the contact</inlineHelpText>
        <label>Preferred Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes a contact as primary</description>
        <inlineHelpText>This checkbox should be selected when the contact is a Primary Contact at the organization. There can be more than one Primary Contact at an organization.</inlineHelpText>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Professional_Designations__c</fullName>
        <description>Tracks a contacts professional desiginations, e.g. Dr.</description>
        <label>Prof. Designations</label>
        <picklist>
            <picklistValues>
                <fullName>AIF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C(k)P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ChFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHLV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRFA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Esq.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PhD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARPC – Accredited Retirem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFA – Chartered Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFA – Chartered Financial Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFP – Certified Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFP – Certified Financial Planner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIMA – Certified Investme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIMA – Certified Investment Management Analyst</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Refresh_Date__c</fullName>
        <description>Last refresh data of data</description>
        <label>Refresh Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Contact Region</description>
        <label>Region</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_ID__c</fullName>
        <description>Contact Rep ID number</description>
        <label>Rep ID #</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Research_Method__c</fullName>
        <description>Tracks a contacts preferred research method</description>
        <label>Research Method</label>
        <picklist>
            <picklistValues>
                <fullName>Lipper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Litman Gregory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Morningstar</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Saleslogix_ID__c</fullName>
        <description>Tracks SLX IDs</description>
        <label>Saleslogix ID</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Specialty_Type__c</fullName>
        <description>Used to TM to assign coverage</description>
        <label>Specialty Type</label>
        <picklist>
            <picklistValues>
                <fullName>529</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>529 Plans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annuity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed End</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defined Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defined Contribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endowment &amp; Foundations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-US Mutual Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outsource CIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Wealth/High Net Worth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Separately Managed Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seperately Managed Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taft Hartley</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Select the option that best represents the status of the contact.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_City__c</fullName>
        <description>Mailing Address</description>
        <label>Street City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Country__c</fullName>
        <description>Mailing Address</description>
        <label>Street Country</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_State_Province__c</fullName>
        <description>Mailing Address</description>
        <label>Street State Province</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Street__c</fullName>
        <description>Mailing Address</description>
        <label>Street Street</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Superfluous__c</fullName>
        <description>Mailing Address</description>
        <label>Street Superfluous</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Street_Zip_Postal_Code__c</fullName>
        <description>Mailing Address</description>
        <label>Street Zip Postal Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_within_Firm__c</fullName>
        <description>Tracks a contacts tier within firm. Updated by dealer relations group.</description>
        <label>Tier within Firm</label>
        <picklist>
            <picklistValues>
                <fullName>2009 Barron&apos;s Top 100 Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009 HD Vest Premier Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010 HD Vest Premier Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adv Satisfaction Top Fd Producer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amer. Top Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ampr. P1 Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ampr. P2 Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AXA Gold Members</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AXA Top 500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baird 1919 Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Center of Influence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Circle of Excellence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comm Prod Lvl 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comm Prod Lvl 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comm Prod Lvl 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comm Prod Lvl 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comm Prod Lvl 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comm Prod Lvl 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCI 2013 Focus 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCI 2013 Top 120</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCI 2014 Top 150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCI 2014 Top 150-Q1-Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCI 2015 Top 150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCI 2015 Top 150-Q1-Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCI 2016 Top 150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCI Target 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDJ Levels 1 and 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDJ Levels 3 and 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDJ Levels 5 6 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDJ Levels 8 9 10</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <description>Field is used to capture time zone for contact address</description>
        <label>Time Zone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unsubscribe__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tracks contact&apos;s that wish to be unsubscribed,different than do not email</description>
        <label>Unsubscribe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_MMD_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use MMD Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_of_Recommendation__c</fullName>
        <description>Tracks whether or not an advisor uses Rec. Lists</description>
        <label>Use of  Firm Recommendation Lists?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>YTD_Sales_in_USD__c</fullName>
        <description>USD Sales</description>
        <label>YTD Sales in USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_Registered__c</fullName>
        <description>Tracks year a rep was registered</description>
        <label>Year Registered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3DisableDuplicateCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Duplicate Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3Index__c</fullName>
        <label>Duplicate Check Index</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>optout__c</fullName>
        <description>Used to block email optout</description>
        <label>Optout</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>silverpop__CRMI_Modified_Date__c</fullName>
        <label>CRMI Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>silverpop__Last_Sync_Date__c</fullName>
        <label>Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>silverpop__Last_Sync_Id__c</fullName>
        <label>Last Sync Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>silverpop__Lead_Rank__c</fullName>
        <label>Lead Rank</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>silverpop__Lead_Score__c</fullName>
        <label>Lead Score</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>silverpop__Silverpop_Behavior_Score__c</fullName>
        <label>Silverpop Behavior Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>silverpop__Silverpop_Lead_Rank__c</fullName>
        <label>Silverpop Lead Rank</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>silverpop__Silverpop_Lead_Score__c</fullName>
        <label>Silverpop Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>silverpop__Silverpop_RecipientID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Silverpop RecipientID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>silverpop__Sync_to_Silverpop_Chk__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use &quot;Sync to Silverpop&quot; to determine which contacts you want to sync with Silverpop. When the box is checked, the field value CANNOT be changed, the selected contacts will be synced to Silverpop and will always sync.</inlineHelpText>
        <label>Sync to Silverpop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>silverpop__Sync_to_Silverpop__c</fullName>
        <label>No Longer Used</label>
        <picklist>
            <picklistValues>
                <fullName>silverpop__Not Used</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>All_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
        <columns>CONTACT.ADDRESS2_COUNTRY_CODE</columns>
        <columns>YTD_Sales_in_USD__c</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Consultant</fullName>
        <active>true</active>
        <description>Used for Consultant Contacts</description>
        <label>Consultant</label>
    </recordTypes>
    <recordTypes>
        <fullName>Consultant_Verified</fullName>
        <active>true</active>
        <label>Consultant - Verified</label>
    </recordTypes>
    <recordTypes>
        <fullName>Institutional</fullName>
        <active>true</active>
        <description>Used for Institutional Contacts</description>
        <label>Institutional</label>
    </recordTypes>
    <recordTypes>
        <fullName>Institutional_Verified</fullName>
        <active>true</active>
        <label>Institutional - Verified</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retail</fullName>
        <active>true</active>
        <description>Used for Retail Contacts</description>
        <label>Retail</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retail_Verified</fullName>
        <active>true</active>
        <label>Retail - Verified</label>
    </recordTypes>
    <recordTypes>
        <fullName>UNKNOWN</fullName>
        <active>true</active>
        <description>Unknown record type for data migration</description>
        <label>UNKNOWN</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Either_Business_Email_or_Phone_Rule</fullName>
        <active>true</active>
        <description>This rule will ensure that either an address, email or phone number are populated before a contact record is saved.</description>
        <errorConditionFormula>AND( 
ISBLANK(Email), 
ISBLANK(Phone), 
ISBLANK(MailingCountry),
ISBLANK(MobilePhone)
)</errorConditionFormula>
        <errorMessage>Address/Email/Phone information needs to be entered to save the Contact Record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EnterFirstName</fullName>
        <active>true</active>
        <description>Requires first name for MDM</description>
        <errorConditionFormula>FirstName =NULL</errorConditionFormula>
        <errorMessage>Please enter a first name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_have_an_Org</fullName>
        <active>true</active>
        <errorConditionFormula>AccountId =NULL</errorConditionFormula>
        <errorMessage>Please enter an Organization</errorMessage>
    </validationRules>
</CustomObject>